# lt-services/spec/api.spec.yaml
@@ -157,7 +157,8 @@ paths:
           name: email
           schema:
             type: string
-          description: The token to verify user
+            format: email
+          description: The email of the account to reset password
           required: true
       responses:
         '200':
@@ -184,6 +185,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDto'
+        '500':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
+  /auth/reset-password:
+    get:
+      tags:
+        - auth
+      summary: User verification
+      description: User registration using user details
+      operationId: verifyUser
+      parameters:
+        - in: query
+          name: token
+          schema:
+            type: string
+          description: The token to verify user
+      responses:
+        '300':
+          description: Redirect
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto''
         '500':
           description: Invalid request
           content:
